--- a/index.Rmd
+++ b/index.Rmd
@@ -13,6 +13,8 @@ Click the links in the menu above to look around.
 
 # Notes
 
+cool
+
 This website is a collection of regular (R)Markdown document, so you can use all the usual formatting.
 
 If you are new to R Markdown, you can learn more about it [on the R Markdown website](https://rmarkdown.rstudio.com/).
