--- a/index.Rmd
+++ b/index.Rmd
@@ -18,9 +18,7 @@ output:
 
 # 课程背景介绍
 
-武汉大学遥感学院本科生专业选修课"环境保护与规划"一直由万幼川教授主讲，内容分为5大部分，包括：遥感在环境中的应用、环境概论、大气污染及污染扩散模型、水质模型与水质信息系统、植被生态模型，后因课时数下调至32个，万教授删减了植被生态模型部分。
-
-2022年开始，在万教授退休之际，我将课程接手过来，正赶上武汉大学进行2023版本科生培养方案修订，在系里讨论时，有位国际著名的定量遥感学家提出：遥感的学生应该学习地球系统科学相关内容，而目前的课表中没有涉及。系里的老师们都非常赞同，我于是准备在课程中增加地球系统科学的一些要点内容。
+武汉大学遥感学院本科生专业选修课"环境保护与规划"一直由万幼川教授主讲，内容分为5大部分，包括：遥感在环境中的应用、环境概论、大气污染及污染扩散模型、水质模型与水质信息系统、植被生态模型，后因课时数下调至32个，万教授删减了植被生态模型部分。2022年开始，在万教授退休之际，我将课程接手过来，正赶上武汉大学进行2023版本科生培养方案修订，在系里讨论时，有位国际著名的定量遥感学家提出：遥感的学生应该学习地球系统科学相关内容，而目前的课表中没有涉及。系里的老师们都非常赞同，我于是准备在课程中增加地球系统科学的一些要点内容。
 
 地球系统科学是近半个世纪以来随着全球变化而发展起来的学科，与卫星遥感技术和计算机复杂系统模拟紧密关联。随着对全球变化的研究，人们意识到地球不同圈层之间紧密关联、相互影响，要搞清楚全球变化的问题，需建立地球是一个整体的认知模式。同时，对地球系统内各大圈层的认知能够促进遥感技术更好应用于各个地学研究领域，开展深入的学科交叉融合，为同学们今后开展研究工作打下良好基础。
 
