--- a/timesat.Rmd
+++ b/timesat.Rmd
@@ -6,7 +6,7 @@ output: html_document
 ---
 
 [TIMESAT软件](https://web.nateko.lu.se/timesat/timesat.asp)是由瑞典隆德大学的[Lars Eklundh](https://web.nateko.lu.se/Personal/Lars.Eklundh/)及瑞典马尔默大学的
-[Per Jönsson](https://mau.se/en/persons/per.jonsson/)在大约20年前开发的遥感物候分析工具，被全球遥感界广泛使用。TIMESAT使用[FORTRAN语言](https://baike.baidu.com/item/FORTRAN%E8%AF%AD%E8%A8%80/295590)编写，该语言面向科学计算，相较于其他编程语言，其运算效率号称是最快的。
+[Per Jönsson](https://mau.se/en/persons/per.jonsson/)在大约20年前开发的遥感物候分析工具，被全球遥感界广泛使用，最近欧洲哥白尼计划项目下的高分辨率物候和生产力产品[HR-VPP](https://land.copernicus.eu/pan-european/biophysical-parameters/high-resolution-vegetation-phenology-and-productivity)就是基于TIMESAT生成的。TIMESAT使用[FORTRAN语言](https://baike.baidu.com/item/FORTRAN%E8%AF%AD%E8%A8%80/295590)编写，该语言面向科学计算，相较于其他编程语言，其运算效率号称是最快的。
 
 本页介绍利用TIMESAT软件和MODIS NDVI产品进行物候分析，包括：数据下载、数据准备、数据处理、结果制图、分析整个过程，详细英文教程可以参见[TIMESAT用户手册](/)。
 
@@ -46,7 +46,7 @@ output: html_document
 
 </center>
 
-选择一个感兴趣区域，可以利用交互式地图选取，这里我们用方框选取从北方草原到南方森林的一个长条地区作为实验区，选择这里纯粹是个人爱好，你也可以选取其他任何区域，但是要注意实验区的面积越大，你处理的数据量也就越大。给自己选定的区域一个名称，这里我们输入`modis_course`。
+选择一个感兴趣区域，可以利用交互式地图选取，这里我们用方框选取从北方草原到南方森林的一个长条地区作为实验区，选择这里纯粹是个人爱好，你也可以选取其他任何区域，但是要注意：实验区的面积越大，你处理的数据量也就越大。给自己选定的区域一个名称，这里我们输入`modis_course`。
 
 <center>
 
@@ -63,7 +63,7 @@ output: html_document
 
 </center>
 
-`pixel_reliability`为数据质量概要信息，可以用来过滤掉质量差的数据点（去噪），下图为MOD13用户手册中的介绍：
+`pixel_reliability`为数据质量概要信息，可以用来过滤掉质量差的数据点（去噪），下图为MOD13用户手册中的介绍，我们将使用这个数据作为TIMESAT的QA数据质量文件输入：
 
 <center>
 
@@ -89,7 +89,7 @@ output: html_document
 
 # 数据预处理
 
-下面我们将使用R编程，按照TIMESAT对输入数据的格式要求，对下载MODIS数据进行预处理。
+下面我们将使用`R`编程，按照`TIMESAT`对输入数据的格式要求，对下载`MODIS`数据进行预处理。
 
 ## 文件组织
 
@@ -101,13 +101,13 @@ output: html_document
 
 </center>
 
-将MODIS NDVI的tif文件拷贝到`..\data\GeoTIFF\NDVI`中，质量标识文件 pixel reliability的tif文件拷贝到`..\data\GeoTIFF\QA`中。注意这两组数据应一一对应，以我们这个实验为例，NDVI和pixel reliability分别有253个文件，从2011年到2021年，每年23个16天合成的数据。
+将MODIS NDVI的tif文件拷贝到`..\data\GeoTIFF\NDVI`中，质量标识文件 pixel reliability的tif文件拷贝到`..\data\GeoTIFF\QA`中。注意这两组数据应一一对应，以我们这个实验为例，NDVI和pixel reliability分别有230个文件，从2011年到2021年，每年23个16天合成的数据。
 
 ## 影像数据格式转换
 
-将下载的GeoTIFF数据转成二进制ENVI格式才能输入到TIMESAT中。ENVI软件的数据格式既是二进制+头文件(`*.hdr`，对二进制文件的解释)。
+将下载的`GeoTIFF`数据转成二进制`ENVI`格式才能输入到`TIMESAT`中。`ENVI`软件的数据格式既是二进制+头文件(`*.hdr`，对二进制文件的解释)。
 
-这里，我们用R代码进行格式转换。首先，打开`RStudio`，新建R Script文件：
+这里，我们用`R`代码进行格式转换。首先，打开`RStudio`，新建R Script文件：
 
 <center>
 
@@ -115,10 +115,9 @@ output: html_document
 
 </center>
 
-将以下代码粘贴到新建的R Script文件中，并保存在`Rcode`文件夹下。注意根据你的实际情况修改文件路径。
+将以下代码粘贴到新建的`R Script`文件中，并保存在`Rcode`文件夹下。注意根据你的实际情况修改文件路径。运行`R`文件的方法为：选中要运行的部分，点击右上角的`Run`图标，或`Ctrl + Shit + Enter`。
 
-
-```
+```{r eval=FALSE, include=TRUE}
 #加载需要用的软件包
 if (!require("tidyverse")) install.packages("tidyverse"); library(tidyverse)
 if (!require("terra")) install.packages("terra"); library(terra)
@@ -162,7 +161,6 @@ append(as.character(num), qa_envi_files_b) %>%
   write.table(file = "D:/modis/data/QA_list.txt",
               sep = "\n", quote = FALSE, 
               row.names = FALSE, col.names = FALSE)
-
 ```
 
 ## 转换后的文件
@@ -183,7 +181,7 @@ append(as.character(num), qa_envi_files_b) %>%
 
 </center>
 
-`data`文件夹中会生成两个txt文件，分别为NDVI和pixel_reliability文件的路径列表(list)，会作为TIMESAT软件的输入文件使用。txt文件的第一行为输入数据的总个数，这里是230 个 = 23个/年 * 10年：
+`data`文件夹中会生成两个`txt`文件，分别为`NDVI`和`pixel_reliability`文件(即`TIMESAT`中要使用的`QA`文件)的路径列表(`list`)，会作为`TIMESAT`软件的输入文件使用。`txt`文件的第一行为输入数据的总个数，这里是`230`个 = `23`个/年 * `10`年：
 
 <center>
 
@@ -204,7 +202,7 @@ append(as.character(num), qa_envi_files_b) %>%
 
 </center>
 
-选择`Add with Subfolders..`，导航到timesat33软件的路径，选择`timesat_matlab`文件夹：
+选择`Add with Subfolders..`，导航到`timesat33`软件的路径，选择`timesat_matlab`文件夹：
 
 <center>
 
@@ -226,7 +224,7 @@ append(as.character(num), qa_envi_files_b) %>%
 
 </center>
 
-然后在matlab命令行输入`timesat`，回车，就可以打开软件界面啦，包含三个模块：
+然后在`matlab`命令行输入`timesat`，回车，就可以打开软件界面啦，包含三个模块：
 
 <center>
 
@@ -244,7 +242,7 @@ append(as.character(num), qa_envi_files_b) %>%
 
 </center>
 
-选择之前在R中生成的list文件`..data/NDVI_list.txt`，在TSM_imageview窗口中输入影像的数据类型、行列数，这些信息可以打开任一个ENVI的头文件.hdr获取，填好以后，点击`Draw`，就可以看到实验区NDVI的空间分布了，在列表中选择任一个时间的文件，点击`Draw`之后就会更新：
+选择之前在`R`中生成的`list`文件`..data/NDVI_list.txt`，在`TSM_imageview`窗口中输入影像的数据类型、行列数，这些信息可以打开任一个`ENVI`的头文件`.hdr`获取，填好以后，点击`Draw`，就可以看到实验区`NDVI`的空间分布了，在列表中选择任一个时间的文件，点击`Draw`之后就会更新：
 
 <center>
 
@@ -261,7 +259,7 @@ append(as.character(num), qa_envi_files_b) %>%
 
 </center>
 
-选择之前在R中生成的NDVI和QA的list文件，配置如下所示：
+选择之前在`R`中生成的`NDVI`和`QA`的`list`文件，配置如下所示：
 
 <center>
 
@@ -269,7 +267,7 @@ append(as.character(num), qa_envi_files_b) %>%
 
 </center>
 
-其中，QA用来根据不同数据质量赋予NDVI观测点权重，这里我们把天空晴朗的无云观测(QA值为0)赋予权重为1；把数据质量一般的观测(QA值为1)赋予权重为0.5，有云和雪覆盖的观测(QA值为2-3)赋予权重为0。
+其中，`QA`用来根据不同数据质量赋予`NDVI`观测点权重，这里我们把天空晴朗的无云观测(`QA`值为`0`)赋予权重为`1`；把数据质量一般的观测(`QA`值为`1`)赋予权重为`0.5`，有云和雪覆盖的观测(`QA`值为`2-3`)赋予权重为`0`。
 
 点击`Show image`可以选择显示时间序列的窗口范围：`Rows to process`和`Columns to process`:
 
@@ -341,7 +339,7 @@ append(as.character(num), qa_envi_files_b) %>%
 
 </center>
 
-处理完成后，`/run`文件夹中会生成`.tts`、`.tpa`、`.ndx`文件，这是TIMESAT的中间文件，可以用来查看处理结果，经过后处理即可生成ENVI二进制格式的物候参数了。
+处理完成后，`/run`文件夹中会生成`.tts`、`.tpa`、`.ndx`文件，这是TIMESAT的中间文件，可以用来查看处理结果，经过后处理即可生成`ENVI`二进制格式的物候参数了。
 
 <center>
 
@@ -353,7 +351,7 @@ append(as.character(num), qa_envi_files_b) %>%
 
 ## 生成拟合时间序列影像
 
-曲线拟合可以将原始数据中存在云污染等的观测值进行填补，生成时空连续的影像序列，TIMESAT输出拟合之后的时空连续影像操作如下：点击`TSF_fit2img`：
+曲线拟合可以将原始数据中存在云污染等的观测值进行填补，生成时空连续的影像序列，`TIMESAT`输出拟合之后的时空连续影像操作如下：点击`TSF_fit2img`：
 
 <center>
 
@@ -361,7 +359,7 @@ append(as.character(num), qa_envi_files_b) %>%
 
 </center>
 
-按照提示在cmd窗口中键入参数，生成结果：
+按照提示在`cmd`窗口中键入参数，生成结果：
 
 <center>
 
@@ -369,9 +367,9 @@ append(as.character(num), qa_envi_files_b) %>%
 
 </center>
 
-利用如下R代码生成list文件txt方便使用TIMESAT的`TSM_imageview`查看拟合后的影像(记得根据自己实际情况更改文件路径)：
+利用如下`R`代码生成`list`文件`txt`，方便使用·的`TSM_imageview`查看拟合后的影像(记得根据自己实际情况更改文件路径)：
 
-```
+```{R eval=FALSE, include=TRUE}
 # 生成TIMESAT读list需要的txt文件
 
 #加载需要用的软件包
@@ -428,3 +426,4 @@ append(as.character(num), files_b) %>%
 <img src="img/postprocess3.png" width="800"/>
 
 </center>
+
