--- a/timesat.Rmd
+++ b/timesat.Rmd
@@ -1,16 +1,17 @@
 ---
 title: "TIMESAT和MODIS物候分析实验指导"
-author: "**[田丰](http://jszy.whu.edu.cn/tian_feng/) 武汉大学 遥感信息工程学院**"
+author: '**[田丰](http://jszy.whu.edu.cn/tian_feng/) 武汉大学 遥感信息工程学院**'
 date: "`r Sys.Date()`"
 output: html_document
 ---
 
-[TIMESAT软件](https://web.nateko.lu.se/timesat/timesat.asp)是由瑞典隆德大学的[Lars Eklundh](https://web.nateko.lu.se/Personal/Lars.Eklundh/)及瑞典马尔默大学的
-[Per Jönsson](https://mau.se/en/persons/per.jonsson/)在大约20年前开发的遥感物候分析工具，被全球遥感界广泛使用，最近欧洲哥白尼计划项目下的高分辨率物候和生产力产品[HR-VPP](https://land.copernicus.eu/pan-european/biophysical-parameters/high-resolution-vegetation-phenology-and-productivity)就是基于TIMESAT生成的。TIMESAT使用[FORTRAN语言](https://baike.baidu.com/item/FORTRAN%E8%AF%AD%E8%A8%80/295590)编写，该语言面向科学计算，相较于其他编程语言，其运算效率号称是最快的。
+[TIMESAT软件](https://web.nateko.lu.se/timesat/timesat.asp)是由瑞典隆德大学的[Lars Eklundh](https://web.nateko.lu.se/Personal/Lars.Eklundh/)及瑞典马尔默大学的 [Per Jönsson](https://mau.se/en/persons/per.jonsson/)在大约20年前开发的遥感物候分析工具，被全球遥感界广泛使用，最近欧洲哥白尼计划项目下的高分辨率物候和生产力产品[HR-VPP](https://land.copernicus.eu/pan-european/biophysical-parameters/high-resolution-vegetation-phenology-and-productivity)就是基于TIMESAT生成的。TIMESAT使用[FORTRAN语言](https://baike.baidu.com/item/FORTRAN%E8%AF%AD%E8%A8%80/295590)编写，该语言面向科学计算，相较于其他编程语言，其运算效率号称是最快的。
 
 本页介绍利用TIMESAT软件和MODIS NDVI产品进行物候分析，包括：数据下载、数据准备、数据处理、结果制图、分析整个过程，详细英文教程可以参见[TIMESAT用户手册](/)。
 
-# MODIS NDVI 标准产品
+# **1. 数据下载和预处理**
+
+# 1.1 MODIS NDVI 标准产品
 
 `NDVI`是`MODIS`的标准产品之一，包括16天合成和月合成两种时间分辨率、250米/500米/1公里/0.05度四种空间分辨率，网址：<https://modis.gsfc.nasa.gov/data/dataprod/mod13.php>，其中`MOD13`来自上午星`TERRA`，`MYD13`来自下午星`AQUA`。
 
@@ -36,7 +37,7 @@ output: html_document
 
 </center>
 
-# AppEEARS 数据下载流程
+## 1.2 AppEEARS 数据下载流程
 
 首先登录账户，点击菜单栏中的`Extract` → `Area`，然后选择`Start a new request`。
 
@@ -54,8 +55,7 @@ output: html_document
 
 </center>
 
-指定影像数据的开始时间和结束时间，这里我们选择2011年到2021年。
-在`Select the layers to include in the Sample`对话框中，输入`MOD13A2`，找到`Terra MODIS Vegetation Indices (NDVI & EVI) MOD13A2.061`并选择。在图层中选择`NDVI`和`pixel_reliability`。
+指定影像数据的开始时间和结束时间，这里我们选择2011年到2021年。 在`Select the layers to include in the Sample`对话框中，输入`MOD13A2`，找到`Terra MODIS Vegetation Indices (NDVI & EVI) MOD13A2.061`并选择。在图层中选择`NDVI`和`pixel_reliability`。
 
 <center>
 
@@ -87,11 +87,11 @@ output: html_document
 
 </center>
 
-# 数据预处理
+## 1.3 数据预处理
 
 下面我们将使用`R`编程，按照`TIMESAT`对输入数据的格式要求，对下载`MODIS`数据进行预处理。
 
-## 文件组织
+### 文件组织
 
 创建一个文件夹进行实验操作，其格式如下：
 
@@ -103,7 +103,7 @@ output: html_document
 
 将MODIS NDVI的tif文件拷贝到`..\data\GeoTIFF\NDVI`中，质量标识文件 pixel reliability的tif文件拷贝到`..\data\GeoTIFF\QA`中。注意这两组数据应一一对应，以我们这个实验为例，NDVI和pixel reliability分别有230个文件，从2011年到2021年，每年23个16天合成的数据。
 
-## 影像数据格式转换
+### 影像数据格式转换
 
 将下载的`GeoTIFF`数据转成二进制`ENVI`格式才能输入到`TIMESAT`中。`ENVI`软件的数据格式既是二进制+头文件(`*.hdr`，对二进制文件的解释)。
 
@@ -115,7 +115,7 @@ output: html_document
 
 </center>
 
-将以下代码粘贴到新建的`R Script`文件中，并保存在`Rcode`文件夹下。注意根据你的实际情况修改文件路径。运行`R`文件的方法为：选中要运行的部分，点击右上角的`Run`图标，或`Ctrl + Shit + Enter`。
+将以下代码粘贴到新建的`R Script`文件中，并保存在`Rcode`文件夹下。注意根据你的实际情况修改文件路径。
 
 ```{r eval=FALSE, include=TRUE}
 #加载需要用的软件包
@@ -163,7 +163,16 @@ append(as.character(num), qa_envi_files_b) %>%
               row.names = FALSE, col.names = FALSE)
 ```
 
-## 转换后的文件
+运行`R`文件的方法为：选中要运行的部分，点击右上角的`Run`图标，或`Ctrl + Enter`：
+
+<center>
+
+<img src="img/r_2.png" width="800"/>
+
+</center>
+
+
+### 转换后的文件
 
 转换完成后，`data/ENVI`文件夹中应该看到envi格式的NDVI和QA数据，如下图所示：
 
@@ -181,7 +190,7 @@ append(as.character(num), qa_envi_files_b) %>%
 
 </center>
 
-`data`文件夹中会生成两个`txt`文件，分别为`NDVI`和`pixel_reliability`文件(即`TIMESAT`中要使用的`QA`文件)的路径列表(`list`)，会作为`TIMESAT`软件的输入文件使用。`txt`文件的第一行为输入数据的总个数，这里是`230`个 = `23`个/年 * `10`年：
+`data`文件夹中会生成两个`txt`文件，分别为`NDVI`和`pixel_reliability`文件(即`TIMESAT`中要使用的`QA`文件)的路径列表(`list`)，会作为`TIMESAT`软件的输入文件使用。`txt`文件的第一行为输入数据的总个数，这里是`230`个 = `23`个/年 \* `10`年：
 
 <center>
 
@@ -191,8 +200,9 @@ append(as.character(num), qa_envi_files_b) %>%
 
 至此，数据准备完成，可以打开matlab运行TIMESAT软件了。
 
+# **2. 运行TIMESAT计算物候参数**
 
-# matlab设置
+## 2.1 matlab设置
 
 将实验文件夹设为工作目录，这里是`D:\modis`。然后点击`Set Path`添加`TIMESAT`软件的路径：
 
@@ -210,13 +220,11 @@ append(as.character(num), qa_envi_files_b) %>%
 
 </center>
 
-
 <center>
 
 <img src="img/matlab_3.png" width="800"/>
 
 </center>
-
 
 <center>
 
@@ -232,7 +240,7 @@ append(as.character(num), qa_envi_files_b) %>%
 
 </center>
 
-# TIMESAT查看数据和生成设置文件
+## 2.2 TIMESAT查看数据和生成设置文件
 
 点击`TSM_imageview`，打开之后选择`File → open file list`：
 
@@ -249,7 +257,6 @@ append(as.character(num), qa_envi_files_b) %>%
 <img src="img/view2.png" width="800"/>
 
 </center>
-
 
 点击`TSM_GUI`，打开之后选择`File → Open list image files`：
 
@@ -295,9 +302,9 @@ append(as.character(num), qa_envi_files_b) %>%
 
 检查一下设置，然后就可以保存设置文件到`/run`文件夹了。这里可以为每一种植被类型(`Land cover`)设置不同的参数，我们暂且用同一种参数实验。准备好`settings`文件后，就可以运行处理了。
 
-# TIMESAT执行数据处理
+## 2.3 TIMESAT执行数据处理
 
-## 单核处理
+### 单核处理
 
 点击`TSF_process`，选择配置文件`modis.set`：
 
@@ -315,7 +322,7 @@ append(as.character(num), qa_envi_files_b) %>%
 
 </center>
 
-## 并行处理
+### 并行处理
 
 如果数据处理量较大，`TIMESAT`还提供了并行处理。可以按`Ctrl + c`停止，然后点击`TSF_process parallel`，键入想要使用的处理器个数(最好不要把所有的`CUP`都占用，容易死机)：
 
@@ -339,7 +346,7 @@ append(as.character(num), qa_envi_files_b) %>%
 
 </center>
 
-处理完成后，`/run`文件夹中会生成`.tts`、`.tpa`、`.ndx`文件，这是TIMESAT的中间文件，可以用来查看处理结果，经过后处理即可生成`ENVI`二进制格式的物候参数了。
+处理完成后，`/run`文件夹中会生成`.tts`、`.tpa`、`.ndx`文件，这是TIMESAT的中间文件，可以用来查看处理结果，经过后处理即可生成`ENVI`二进制格式的影像结果了。
 
 <center>
 
@@ -347,11 +354,11 @@ append(as.character(num), qa_envi_files_b) %>%
 
 </center>
 
-# TIMESAT结果查看和后处理
+# **3 TIMESAT结果查看和后处理**
 
-## 生成拟合时间序列影像
+## 3.1 生成拟合时间序列影像
 
-曲线拟合可以将原始数据中存在云污染等的观测值进行填补，生成时空连续的影像序列，`TIMESAT`输出拟合之后的时空连续影像操作如下：点击`TSF_fit2img`：
+曲线拟合可以将原始数据中存在云污染等的观测值进行填补，生成时空连续的影像序列，可以用`TSM_viewfits`来查看拟合结果：
 
 <center>
 
@@ -359,7 +366,7 @@ append(as.character(num), qa_envi_files_b) %>%
 
 </center>
 
-按照提示在`cmd`窗口中键入参数，生成结果：
+`TIMESAT`输出的拟合结果去除了噪音，具有时空连续性，可以将该结果输出为二进制影像文件，点击`TSF_fit2img`：
 
 <center>
 
@@ -367,7 +374,19 @@ append(as.character(num), qa_envi_files_b) %>%
 
 </center>
 
-利用如下`R`代码生成`list`文件`txt`，方便使用·的`TSM_imageview`查看拟合后的影像(记得根据自己实际情况更改文件路径)：
+按照提示在`cmd`窗口中键入参数，生成结果：
+
+<center>
+
+<img src="img/results3.png" width="800"/>
+
+</center>
+
+现在`run`文件夹中的文件很多了，为了更清楚的组织文件，我们可以新建文件夹`fitted_image/TIMESATout`，并把生成拟合影像序列移动过去。
+
+为了查看拟合后的时空连续的`NDVI`影像，我们介绍两种方法：
+
+1.  利用如下`R`代码生成`list`文件`txt`，就可以使用`TIMESAT`的`TSM_imageview`查看拟合后的影像(记得根据自己实际情况更改文件路径)：
 
 ```{R eval=FALSE, include=TRUE}
 # 生成TIMESAT读list需要的txt文件
@@ -376,9 +395,10 @@ append(as.character(num), qa_envi_files_b) %>%
 if (!require("tidyverse")) install.packages("tidyverse"); library(tidyverse)
 
 # 获取影像数据文件的路径列表
-files <- list.files(path = "D:/modis/run", 
+files <- list.files(path = "D:/modis/run/fitted_image/TIMESATout", 
                     pattern = "modis_fited_image_",
-                    full.names = TRUE)
+                    full.names = TRUE) %>% 
+  str_subset(".hdr", negate = T)
 
 # 准备数据列表的list文件，用于TIMESAT读取
 num <- length(files)  # 影像时间序列个数
@@ -393,14 +413,48 @@ append(as.character(num), files_b) %>%
               
 ```
 
-<center>
+2.  给`TIMESAT`生成的拟合二进制文件添加`.hdr`头文件，并转成`tif`，这样就可以用其他软件(比如ENVI和GIS软件等)进行查看了，比如，在QGIS中[查看影像时间序列]()。首先在`fitted_image`文件夹下创建`tif`文件夹，然后运行下面的`R`代码：
 
-<img src="img/results3.png" width="800"/>
+```{r eval=FALSE, include=TRUE}
+# 将TIMESAT生成的二进制文件图像转换成tif格式
 
-</center>
+#加载需要用的软件包
+if (!require("tidyverse")) install.packages("tidyverse"); library(tidyverse)
+if (!require("terra")) install.packages("terra"); library(terra)
+
+# 获取影像数据文件的路径列表
+files <- list.files(path = "D:/modis/run/fitted_image/TIMESATout",
+                    pattern = "modis_fited_image_",
+                    full.names = TRUE) %>%
+  str_subset(".hdr", negate = T)
+
+# 生成头文件 -------------------------------------------------------------------
+
+outname <- paste0(files, ".hdr")
+
+# 读取原始NDVI数据的头文件
+hdr <- read_file("D:/modis/run/add.hdr")
+
+# 生成所有拟合影像文件相应的hdr文件
+for (i in c(1: length(files))) {
+  write_file(hdr, outname[i])
+}
+
+# 输出文件命名，对应到原始NDVI影像的命名方式
+doy_file_names <- list.files("D:/modis/data/GeoTIFF/NDVI", pattern = ".tif") %>% 
+  str_extract("doy\\d{7}") %>% paste0("_fitted.tif")
+
+tif_out_files <- paste0("D:/modis/run/fitted_image/tif/", doy_file_names)
+
+# 生成拟合后的TIFF格式影像
+writeRaster(rast(files), tif_out_files, overwrite = T)
+
+```
 
 
-## 生成物候参数影像
+## 3.2 生成物候参数结果影像
+
+### 单个物候参数、单个年份引导的方式：
 
 点击`TSF_seas2img`生成物候参数影像：
 
@@ -420,10 +474,104 @@ append(as.character(num), files_b) %>%
 
 使用`TSM_imageview`查看物候参数：
 
-
 <center>
 
 <img src="img/postprocess3.png" width="800"/>
 
 </center>
 
+### 利用.bat文件进行批量生成
+
+**利用上面的步骤可以检查和理解TIMESAT物候参数的输出格式和设计思路：**
+
+1.  每年最多可以探测出两个生长季，如果每一个像元只有一个生长季，则其第二个季节的物候参数为填充值
+
+2.  对于时间类的输出结果，如生长季开始时间`start-of-season time` (`SOS`)，其结果为整个影像时间序列的序号，而非我们常用的日期或`DOY` (Day of Year，一年中的天数)。
+
+如果要生成多个物候参数、多年的结果，用前面的方式则太过繁琐，对此，我们可以在命令行中一次性的输入上述引导步骤中所需要的所有参数，例如，上图`cmd`中的过程就可以用一行代码来实现：
+
+```{bash eval=FALSE, include=TRUE}
+D:\modis\run> TSF_seas2img modis_TS.tpa 1 1 23 -1 -2 sos_2012 3
+```
+
+其中，TSF_seas2img为TIMESAT中的函数，modis_TS.tpa为之前运行TIMESAT计算物候参数后生成的文件，后面数字1表示具体物候参数指标（见下图），之后的数字参数含义也都可以参看上图`cmd`中引导对话框的内容。
+
+<center>
+
+<img src="img/bat1.png" width="600"/>
+
+</center>
+
+因此，每个物候参数、每一年的提取都可以用一行代码来实现，把这些代码穿起来组织成一个`.bat`文件，就可以像之前进行`TIMESAT`数据并行处理(`TSF_process parallel`)那样，利用`.bat`文件进行物候参数提取的批处理了。我们用下面的`R`代码来生成这个`.bat`文件（生成的`.bat`文件可以用文本编辑器打开，见代码之后的图）：
+
+```{r eval=FALSE, include=TRUE}
+# 生成批处理的.bat文件，将TIMESAT的物候参数输出为影像
+
+if (!require("tidyverse")) install.packages("tidyverse"); library(tidyverse)
+
+cmd <- NULL
+# 对所有物候参数进行循环
+for (para in c(1,2,3,5,10)){ # 将准备提取的物候参数对应的数字填到这里
+  
+  # 建立物候参数名称和代表值的查找表，对应TIMESAT的物候参数指标
+  pheno <- case_when(
+              para == 1 ~ "sos",       # Start-of-season time
+              para == 2 ~ "eos",       # End-of-season time
+              para == 3 ~ "los",       # Length of season
+              para == 4 ~ "base",      # Base value
+              para == 5 ~ "middle",    # Time of middle of season
+              para == 6 ~ "maxval",    # Maximum value value of fitted data
+              para == 7 ~ "amp",       # Amplitude
+              para == 8 ~ "lder",    # Left derivative
+              para == 9 ~ "rder",    # Right derivative
+              para == 10 ~ "integral", # Large integral
+              para == 11 ~ "sintegral",    # Small integral
+              para == 12 ~ "sosval",    # Start-of-season value
+              para == 13 ~ "eosval",    # End-of-season value
+            )
+  
+    # 对所有年分循环
+  for (year in c(2012:2021)) {   # 准备提取的年份
+    
+    # 找出每年23个影像在整个时间序列的位置
+    idx_start <- (year - 2012) * 23 + 1
+    idx_end <- (year - 2012) * 23 + 1 + 23
+    outname <- paste(pheno, year, sep = "_")
+    
+    # 命令行代码
+    tmp <- paste("TSF_seas2img", "modis_TS.tpa", para, idx_start, idx_end, -1, -2, outname, 3, sep = " ")
+    
+    cmd <- c(cmd, tmp)
+  }
+}
+
+write_lines(cmd, "D:/modis/run/season2img.bat")
+
+```
+
+<center>
+
+<img src="img/bat2.png" width="500"/>
+
+</center>
+
+
+之后就可以在`cmd`命令行中输入`.bat`文件名进行批处理了:
+
+```{bash eval=FALSE, include=TRUE}
+D:\modis\run>season2img.bat
+```
+
+运行完成后，你的文件夹中就生成了物候参数的二进制文件，这些二进制影像文件可以使用TIMESAT的`TSM_imageview`工具来查看了。
+
+<center>
+
+<img src="img/bat3.png" width="800"/>
+
+</center>
+
+## 3.3 物候参数数据后处理
+
+首先，我们将提取的物候参数结果移动到一个单独的文件夹中，创建`pheno_img/TIMESATout`文件夹和子文件夹，将结果移动过来，然后在pheno_img文件夹下创建`tif`文件夹用来存放tif文件
+
+`TIMESAT`的`SOS`和`EOS`的输出结果是整个时间序列的序号，为此，我们要通过计算将其转换成`DOY`或是具体的日期。这个步骤看似容易，但实际比较棘手(tricky)，因为有的地方一个完整的生长季可以是跨年的，比如南方的生长季结束时间有可能出现在第二年的2月份。对此，我们将以生长季峰值(`Time of middle of season`)出现的年份为准，来转换生长季开始(`SOS`)和结束(`EOS`)的时间。
