--- a/qgis.Rmd
+++ b/qgis.Rmd
@@ -4,7 +4,7 @@ author: "田丰 武汉大学 遥感信息工程学院"
 date: "`r Sys.Date()`"
 output: 
   html_document:
-    toc: FALSE
+    toc: false
 ---
 
 [QGIS](https://www.qgis.org/zh-Hans/site/)的很多功能与ArcGIS相似，其优势在于开源、开源、开源。这里我们介绍如何用QGIS查看影像时间序列中任一像元的时间序列曲线。
