--- a/timesat.Rmd
+++ b/timesat.Rmd
@@ -1133,15 +1133,13 @@ ggsave("D:/modis/figure/Pheno_trend.png", height = 7, width = 15)
 
 ```
 
-生成的物候参数时间变化趋势的结果见下图所示（注：`d`中的`Integral`是`NDVI`的生长季积分）：
+生成的物候参数时间变化趋势的结果见下图所示（注：`d`中的`Integral`是`NDVI`的生长季积分）。总的来看，实验区的大部分在2012-2020年间都经历了明显的物候变化趋势，生长季开始时间（SOS）推后、植被生长季长度（LOS）缩短。注：本教程未计算趋势分析结果的统计显著性水平(p-value)，不再对具体区域（像元）做深入分析，**对这些未涉及的内容感兴趣的同学，可以继续深入探索、研究**。
 
 <center>
 
 <img src="img/Pheno_trend.png" width="800"/>
 
 </center>
-
-
 
 
 ## 4.3 气候敏感性分析
